<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnalysisActivity">


    <TextView
        android:id="@+id/mainText2"
        android:layout_width="374dp"
        android:layout_height="44dp"
        android:text="@string/mainText2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="380dp"
        android:layout_height="43dp"
        android:text="@string/mainText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/mainText3"
        android:layout_width="386dp"
        android:layout_height="37dp"
        android:text="@string/mainText3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <Button
        android:id="@+id/goAudio"
        android:layout_width="132dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/button"
        android:text="@string/goAudio"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        app:strokeColor="@color/black"
        app:strokeWidth="5dp" />

    <Button
        android:id="@+id/goPhoto"
        android:layout_width="132dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/button"
        android:text="@string/goPhoto"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723"
        app:strokeColor="@color/black"
        app:strokeWidth="5dp" />

    <Button
        android:id="@+id/goVideo"
        android:layout_width="137dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/button"
        android:radius="41dp"
        android:text="@string/goVideo"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532"
        app:strokeColor="@color/black"
        app:strokeWidth="5dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="358dp"
        android:layout_height="304dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@drawable/logo"
        tools:srcCompat="@drawable/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>